# DistributedInference

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  sim_3nodes.yaml
proto/: inference.proto
scripts/: benchmark_kv_cache.py  run_demo.py  run_web_demo.py  run_web_dynamic_demo.py
src/distributed_inference/: __init__.py
src/distributed_inference/benchmarks/: profiler.py
src/distributed_inference/cli/: manage_nodes.py  run_inference.py  start_coordinator.py  start_node.py  start_web.py
src/distributed_inference/common/: config.py  logging.py  serialization.py
src/distributed_inference/coordinator/: admission.py  concurrent_scheduler.py  orchestrator.py  partitioner.py  rebalancer.py  registry.py  router.py  scheduler.py
src/distributed_inference/fault_tolerance/: checkpointing.py  health_monitor.py  recovery.py
src/distributed_inference/node/: agent.py  executor.py  resources.py  server.py
src/distributed_inference/pipeline/: inference.py
src/distributed_inference/proto/: inference_pb2.py  inference_pb2_grpc.py
tests/: test_admission.py  test_concurrent_scheduler.py  test_fault_tolerance.py  test_node_agent_heartbeat.py  test_node_executor.py  test_node_executor_cache.py  test_node_executor_reload.py  test_node_server_cache_rpc.py  test_orchestrator_concurrency.py  test_orchestrator_health.py  test_orchestrator_rebalance.py  test_partitioner.py  test_partitioner_adaptive.py  test_pipeline.py  test_rebalancer.py  test_serialization.py  test_streaming_inference.py  test_web_gateway.py
(+5 files in other folders)
